--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,40 +1,3 @@
-<input type="text" [(ngModel)]="title">
-{{title}}
+<router-outlet></router-outlet>
 
-<!-- ngIf -->
 
-<!-- <div *ngIf='title === "tony"'>
-  este es tony
-</div>
-<div *ngIf='title === "bel"'>
-  esta es bel
-</div>
-<div *ngIf='title === "lufa"'>
-  este es lufa
-</div> -->
-
-<!-- ngSwitch -->
-<div [ngSwitch]='title'>
-  <p *ngSwitchCase= '"tony"'>este es tony</p>
-  <p *ngSwitchCase='"bel"'>esta es bel</p>
-  <p *ngSwitchCase='"lufa"'>este es lufa</p>
-  <p *ngSwitchDefault>no hay match</p>
-</div>
-<!-- click -->
-<button (click)='addItem()'>Add item</button>
-
-<!-- ngfor -->
-<div>
-  <li *ngIf='items.length === 0'>La lista esta vacía</li>
-  <li *ngFor="let name of items; index as i">
-    {{name}} {{i}}
-    <button (click)='deleteItem(i)'>Delete</button>
-  </li>
-</div>
-
-<div *ngFor='let product of products'>
-  <p>{{product.title}}</p>
-  <p>{{product.price}}</p>
-  <p>{{product.description}}</p>
-  <img src={{product.image}} style="width: 200px;">
-</div>
