--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,29 @@
 /* You can add global styles to this file, and also import other style files */
+@import '~swiper/swiper-bundle';
+
+*{
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+body{
+  margin: 0px;
+  padding: 0px;
+}
+
+.product-list{
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+}
+
+@media (min-width: 576px){
+  .product-list{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+@media (min-width: 800px){
+  .product-list{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
