--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,1 +1,32 @@
-<p>footer works!</p>
+<footer class="footer pt-5 pb-2">
+  <div class="container">
+    <div class="row d-flex justify-content-between ">
+      <div class="col-md-4">
+        <h3>Items 1</h3>
+        <mat-list role="list" class="footer-list">
+          <mat-list-item role="listitem">Item 1</mat-list-item>
+          <mat-list-item role="listitem">Item 2</mat-list-item>
+          <mat-list-item role="listitem">Item 3</mat-list-item>
+        </mat-list>
+      </div>
+      <div class="col-md-4">
+        <h3>Items 1</h3>
+        <mat-list role="list" class="footer-list">
+          <mat-list-item role="listitem">Item 1</mat-list-item>
+          <mat-list-item role="listitem">Item 2</mat-list-item>
+          <mat-list-item role="listitem">Item 3</mat-list-item>
+        </mat-list>
+      </div>
+      <div class="col-md-4">
+        <h3>Items 1</h3>
+        <mat-list role="list" class="footer-list">
+          <mat-list-item role="listitem">Item 1</mat-list-item>
+          <mat-list-item role="listitem">Item 2</mat-list-item>
+          <mat-list-item role="listitem">Item 3</mat-list-item>
+        </mat-list>
+      </div>
+    </div>
+    <p class="col">Todos los derechos reservados</p>
+
+  </div>
+</footer>
