--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,24 +1,37 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~swiper/swiper-bundle';
 
-*{
-  font-family: Arial, Helvetica, sans-serif;
-}
+// *{
+//   font-family: Arial, Helvetica, sans-serif;
+// }
 
-body{
-  margin: 0px;
-  padding: 0px;
-}
+// body{
+//   margin: 0px;
+//   padding: 0px;
+// }
 
 .product-list{
   display: grid;
   grid-template-columns: repeat(1, 1fr);
 }
 
+.custom_container{
+  width: 100%;
+  padding-right: 0px;
+  padding-left: 0px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
 @media (min-width: 576px){
   .product-list{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+  }
+  .custom_container{
+    width: 1110px;
+    padding-right: 16px;
+    padding-left: 16px;
   }
 }
 @media (min-width: 800px){
@@ -27,3 +40,9 @@ body{
     grid-template-columns: repeat(4, 1fr);
   }
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+/* Importing Bootstrap SCSS file. */
+@import '~bootstrap/scss/bootstrap';
