--- a/src/app/products/components/product-detail/product-detail.component.html
+++ b/src/app/products/components/product-detail/product-detail.component.html
@@ -1,10 +1,15 @@
-<div>
-  <img [src]="product.image" alt="">
-</div>
-<div>
-  <ul>
-    <li>Nombre: {{product.title}}</li>
-    <li>Precio: {{product.price | currency}}</li>
-  </ul>
-  <p>Descripción: {{product.description}}</p>
+<div *ngIf='product'>
+  <div>
+    <img [src]="product.image" alt="">
+  </div>
+  <div>
+    <ul>
+      <li>Nombre: {{product.title}}</li>
+      <li>Precio: {{product.price | currency}}</li>
+    </ul>
+    <p>Descripción: {{product.description}}</p>
+  </div>
+  <button (click)='createProduct()'>Crear producto copia</button>
+  <button (click)='updateProduct()'>Actualizar producto copia</button>
+  <button (click)='deleteProduct()'>Borrar producto copia</button>
 </div>
