--- a/src/app/admin/components/products-list/products-list.component.html
+++ b/src/app/admin/components/products-list/products-list.component.html
@@ -1,3 +1,4 @@
+<a mat-raised-button routerLink='create' class="btn-create-product">Crear nuevo producto <mat-icon class="example-icon" aria-hidden="false" aria-label="Example user verified icon">verified_user</mat-icon></a>
 <table mat-table [dataSource]="products" class="mat-elevation-z8 products-table">
   <ng-container matColumnDef="id">
     <th mat-header-cell *matHeaderCellDef> ID </th>
@@ -17,9 +18,9 @@
   <ng-container matColumnDef="actions">
     <th mat-header-cell *matHeaderCellDef> Acciones </th>
     <td mat-cell *matCellDef="let product">
-      <button mat-icon-button aria-label="Example icon button with a open in new tab icon" color="primary" (click)='editProduct(product.id)'>
+      <a mat-icon-button aria-label="Example icon button with a open in new tab icon" color="primary" [routerLink]="['edit', product.id]" >
         <mat-icon>create</mat-icon>
-      </button>
+      </a>
       <button mat-icon-button aria-label="Example icon button with a vertical three dot icon" color="warn" (click)='deleteProduct(product.id)'>
         <mat-icon>delete</mat-icon>
       </button>
